index.html: Fixed Blockly App URL.

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             Programming STEMI is really easy with graphical programming language Blockly !
             Using the app requires internet connection.
           </div>
-          <a class="row btn btn-a btn-sm smooth" href="http://stemi-education.github.io/blockly/">
+          <a class="row btn btn-a btn-sm smooth" href="http://stemi-education.github.io/blockly/stemi">
             STEMI blockly app
           </a>
       </div>
